--- a/index.html
+++ b/index.html
@@ -9,14 +9,20 @@
 </head>
 <body>
 <div>
-	<div id="mainBody">
-  	<p><img src="https://cdn.worldvectorlogo.com/logos/game-of-thrones.svg" width="500px" height="200px"></p>
-  	<br>
-  	<h1>Trivia Game</h1>
+	<div class="container" id="mainBody">
+		<div class="row">
+  			<p><img src="https://cdn.worldvectorlogo.com/logos/game-of-thrones.svg" width="500px" height="200px"></p>
+  			<br>
+  			<h1><b>Trivia Game</b></h1>
+  		</div>
+  			<div class="col" id="questions">
+  				<br><br>
+  				<div id="timer"></div>
+  				<br><br>
+  			</div>
 
-				
-</div>
+	</div>
 
-<script type="text/javascript" src="assets\javascript\game.js"></script>
+<script type="text/javascript" src="assets\javascript\app.js"></script>
 </body>
 </html>
