--- a/index.html
+++ b/index.html
@@ -14,14 +14,22 @@
   			<p><img src="https://cdn.worldvectorlogo.com/logos/game-of-thrones.svg" width="500px" height="200px"></p>
   			<br>
   			<h1><b>Trivia Game</b></h1>
+        <p align="center">When prompted with a question, type T if true and F if false. </p>
   		</div>
-  			<div class="col" id="questions">
-  				<br><br>
-  				<div id="timer"></div>
-  				<br><br>
-  			</div>
+  </div>
+  
+  <div class="container" id="quizArea">
+     <div id="wrapper">
+     <div id="time"></div>
+     <div id="question" align="center"></div>
+     <div id="score" align="center"></div>
+     </div>
 
-	</div>
+    <br>
+    <button type="button" class="btn" id="start">Start Game</button> 
+
+  </div>
+</div>
 
 <script type="text/javascript" src="assets\javascript\app.js"></script>
 </body>
